[tool.poetry]
name = "canvaslms"
version = "2.8"
description = "Command-line interface to Canvas LMS"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dbosk/canvaslms"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities"
]
include = ["*/**/*.py"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dbosk/canvaslms/issues"
"Releases" = "https://github.com/dbosk/canvaslms/releases"

[tool.poetry.scripts]
canvaslms = "canvaslms.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
argcomplete = "^2.0.0"
cachetools = "^5.2.0"
canvasapi = "<3.0.0"
keyring = "^23.11.0"
pypandoc = "^1.10"
arrow = "^1.2.3"
rich = "^13.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

