[project]
name = "canvaslms"
version = "4.14"
description = "Command-line interface to Canvas LMS"
authors = [
  {name = "Daniel Bosk", email = "daniel@bosk.se"}
]
maintainers = [
  {name = "Daniel Bosk", email = "dbosk@kth.se"}
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
  "appdirs>=1.4.4",
  "argcomplete>=2,<4",
  "cachetools>=5.3.1",
  "canvasapi (>=3.3.0,<4.0.0)",
  "keyring>=24.2,<26.0",
  "pypandoc>=1.11",
  "arrow>=1.2.3",
  "rich>=13,<15",
  "pyyaml>=5.1"
]

[project.urls]
repository = "https://github.com/dbosk/canvaslms"
documentation = "https://github.com/dbosk/canvaslms/releases"
"Bug Tracker" = "https://github.com/dbosk/canvaslms/issues"

[project.scripts]
canvaslms = "canvaslms.cli:main"

[tool.poetry]
include = [
  { path = "src/**/*.py", format = "wheel" },
  { path = "makefiles", format = "sdist" }
]
exclude = [
  "*/**/.gitignore",
  { path = "*/**/Makefile", format = "wheel" },
  "*/**/ltxobj",
  "*/**/.git"
]

[tool.poetry.group.dev.dependencies]
pdbpp = ">=0.10.3,<0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

