[project]
name = "canvaslms"
version = "5.9"
description = "Command-line interface to Canvas LMS"
authors = [
  {name = "Daniel Bosk", email = "daniel@bosk.se"}
]
maintainers = [
  {name = "Daniel Bosk", email = "dbosk@kth.se"}
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
  "appdirs>=1.4.4",
  "argcomplete>=2,<4",
  "cachetools>=5.3.1",
  "canvasapi (>=3.4.0,<4.0.0)",
  "keyring>=24.2,<26.0",
  "pypandoc>=1.11",
  "arrow>=1.2.3",
  "rich>=13,<15",
  "pyyaml>=5.1"
]

[project.optional-dependencies]
llm = [
  "llm>=0.16; python_version >= '3.9'",
  "llm-openai-plugin (>=0.7,<0.8); python_version >= '3.9'",
  "llm-anthropic (>=0.19,<0.20); python_version >= '3.9'",
  "llm-gemini (>=0.26.1,<0.27.0); python_version >= '3.9'",
  "llm-python (>=0.1,<0.2); python_version >= '3.9'",
  "llm-azure (>=1.1,<2.0); python_version >= '3.9'",
  "llm-github-copilot (>=0.3.1,<1.0.0); python_version >= '3.9'"
]
diff = [
  "patiencediff>=0.2.18,<0.3.0; python_version >= '3.9'"
]

[project.urls]
repository = "https://github.com/dbosk/canvaslms"
documentation = "https://github.com/dbosk/canvaslms/releases"
"Bug Tracker" = "https://github.com/dbosk/canvaslms/issues"

[project.scripts]
canvaslms = "canvaslms.cli:main"

[tool.poetry]
include = [
  { path = "src/**/*.py", format = "wheel" },
  { path = "makefiles", format = "sdist" }
]
exclude = [
  "*/**/.gitignore",
  { path = "*/**/Makefile", format = "wheel" },
  "*/**/ltxobj",
  "*/**/.git"
]

[tool.poetry.group.dev.dependencies]
pdbpp = ">=0.10.3,<0.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
freezegun = "^1.4"
responses = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

